third_party/move/move-compiler-v2/tests/checking/typing/binary_or_invalid.exp

Diagnostics:
error: invalid call of `||`: expected `bool` but found `integer` for argument 1
  ┌─ tests/checking/typing/binary_or_invalid.move:8:9
  │
8 │         0 || 1;
  │         ^^^^^^

error: invalid call of `||`: expected `bool` but found `integer` for argument 1
  ┌─ tests/checking/typing/binary_or_invalid.move:9:9
  │
9 │         1 || false;
  │         ^^^^^^^^^^

error: invalid call of `||`: expected `bool` but found `integer` for argument 2
   ┌─ tests/checking/typing/binary_or_invalid.move:10:9
   │
10 │         false || 1;
   │         ^^^^^^^^^^

error: invalid call of `||`: expected `bool` but found `address` for argument 1
   ┌─ tests/checking/typing/binary_or_invalid.move:11:9
   │
11 │         @0x0 || @0x1;
   │         ^^^^^^^^^^^^

error: invalid call of `||`: expected `bool` but found `u8` for argument 1
   ┌─ tests/checking/typing/binary_or_invalid.move:12:9
   │
12 │         (0: u8) || (1: u128);
   │         ^^^^^^^^^^^^^^^^^^^^

error: invalid call of `||`: expected `bool` but found `M::R` for argument 1
   ┌─ tests/checking/typing/binary_or_invalid.move:13:9
   │
13 │         r || r;
   │         ^^^^^^

error: invalid call of `||`: expected `bool` but found `M::S` for argument 1
   ┌─ tests/checking/typing/binary_or_invalid.move:14:9
   │
14 │         s || s;
   │         ^^^^^^

error: invalid call of `||`: expected `bool` but found `()` for argument 1
   ┌─ tests/checking/typing/binary_or_invalid.move:15:9
   │
15 │         () || ();
   │         ^^^^^^^^

error: invalid call of `||`: expected `bool` but found `()` for argument 2
   ┌─ tests/checking/typing/binary_or_invalid.move:16:9
   │
16 │         true || ();
   │         ^^^^^^^^^^

error: invalid call of `||`: expected `bool` but found `(bool, bool)` for argument 1
   ┌─ tests/checking/typing/binary_or_invalid.move:17:9
   │
17 │         (true, false) || (true, false, true);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: invalid call of `||`: expected `bool` but found `(bool, bool)` for argument 1
   ┌─ tests/checking/typing/binary_or_invalid.move:18:9
   │
18 │         (true, true) || (false, false);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
